@@ -3,7 +3,7 @@
  * ONAP Policy Models
  * ================================================================================
  * Copyright (C) 2019 AT&T Intellectual Property. All rights reserved.
- * Modifications Copyright (C) 2020 Nordix Foundation.
+ * Modifications Copyright (C) 2020-2024 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,7 +26,6 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
@@ -88,7 +87,7 @@ public class PdpGroups {
         if (null == groups) {
             result.setResult(ValidationStatus.INVALID, "is null");
         } else {
-            List<String> names = groups.stream().map(PdpGroup::getName).collect(Collectors.toList());
+            List<String> names = groups.stream().map(PdpGroup::getName).toList();
             if (groups.size() != new HashSet<>(names).size()) {
                 result =
                     new ObjectValidationResult(GROUPS_FIELD, names, ValidationStatus.INVALID, "duplicate group names");
